--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,15 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "latest"
 
       - name: Install dependencies
         run: npm install
 
       - name: Build project
-        run: npm run build
+        run: |
+          npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2024-10-26 --dry-run --outdir=dist
+          cp dist/worker.js _worker.js
 
       - name: Commit and push built worker
         run: |
