--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "name": "bpb-worker-panel",
+  "version": "2.7.2",
+  "author": {
+    "name": "Bia Pain Bache"
+  },
   "devDependencies": {
-    "wrangler": "^3.83.0"
+    "wrangler": "latest"
   },
   "dependencies": {
     "jose": "^5.9.4",
     "js-sha256": "^0.11.0",
     "tweetnacl": "^1.0.3"
-  },
-  "scripts": {
-    "build": "npx wrangler deploy ./src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2024-10-26 --dry-run --outdir=dist && cp ./dist/worker.js ./_worker.js"
   }
 }
