--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
-name: Build and Deploy Worker on Release
+name: Build and Deploy Worker
 
-on: 
-  release: 
-    types: [published]
+on:
+  push:
+    branches:
+      - dev
 
 jobs:
   build:
@@ -11,8 +12,6 @@ jobs:
     steps:
       - name: Check out the code
         uses: actions/checkout@v4
-        with: 
-          ref: dev
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -34,15 +33,5 @@ jobs:
           git add _worker.js
           git commit -m "Automated build: update _worker.js"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload built worker to release assets 
-        uses: actions/upload-release-asset@v1
-        with: 
-          upload_url: ${{ github.event.release.upload_url }} 
-          asset_path: ./_worker.js 
-          asset_name: worker.js 
-          asset_content_type: application/javascript
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
