--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build project
         run: |
           npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2024-10-26 --dry-run --outdir=dist
-          npx javascript-obfuscator dist/worker.js --output _worker.js
+          npx javascript-obfuscator dist/worker.js --output _worker.js --compact true --control-flow-flattening true --numbers-to-expressions true --split-strings true --string-array true
 
       - name: Commit and push built worker
         run: |
