--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2024-10-26 --dry-run --outdir=dist
           cp -f dist/worker.js unobfuscated/worker.js
-          npx javascript-obfuscator --split-strings true --split-strings-chunk-length 2 --dead-code-injection true dist/worker.js --output _worker.js
+          npx javascript-obfuscator --config ./obfs-config.json dist/worker.js --output _worker.js
 
       - name: Commit and push built worker
         run: |
