Revised obfs settings.

--- a/obfs-config.json
+++ b/obfs-config.json
@@ -2,6 +2,13 @@
   "deadCodeInjection": true,
   "deadCodeInjectionThreshold": 0.4,
   "renameGlobals": true,
+  "numbersToExpressions": false,
+  "stringArrayCallsTransform": true,
+  "stringArrayCallsTransformThreshold": 0.75,
+  "stringArrayEncoding": ["base64"],
+  "stringArrayWrappersCount": 2,
+  "stringArrayWrappersParametersMaxCount": 4,
+  "stringArrayWrappersType": "function",
   "splitStrings": true,
   "splitStringsChunkLength": 2,
   "transformObjectKeys": true,
