--- a/obfs-config.json
+++ b/obfs-config.json
@@ -1,14 +1,10 @@
 {
   "deadCodeInjection": true,
   "deadCodeInjectionThreshold": 0.4,
-  "renameGlobals": true,
-  "numbersToExpressions": false,
-  "stringArrayCallsTransform": true,
-  "stringArrayCallsTransformThreshold": 0.75,
+  "numbersToExpressions": true,
   "stringArrayEncoding": ["base64"],
   "stringArrayWrappersCount": 2,
   "stringArrayWrappersParametersMaxCount": 4,
-  "stringArrayWrappersType": "function",
   "splitStrings": true,
   "splitStringsChunkLength": 2,
   "transformObjectKeys": true,
