Revised obfs settings.

--- a/obfs-config.json
+++ b/obfs-config.json
@@ -6,5 +6,7 @@
   "splitStrings": true,
   "splitStringsChunkLength": 2,
   "transformObjectKeys": true,
+  "renameGlobals": true,
+  "unicodeEscapeSequence": true,
   "target": "node"
 }
