--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,12 @@ jobs:
       - name: Build project
         run: |
           npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2025-01-18 --dry-run --outdir=dist
-          cp -f dist/worker.js unobfuscated/worker.js
+          cp -f dist/worker.js dist/_worker.js
+          cp -f dist/worker.js build/unobfuscated-worker.js
+          zip -j build/unobfuscated-worker.zip dist/_worker.js
           npx javascript-obfuscator --config ./obfs-config.json dist/worker.js --output _worker.js
+          cp -f _worker.js build/worker.js
+          zip -j build/worker.zip _worker.js
 
       - name: Commit and push built worker
         run: |
