--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add _worker.js
-          git add -f unobfuscated/worker.js
+          git add -f build/
           git commit -m "Automated build: update _worker.js"
           git push
         env:
