Added build folder by github action.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Build project
         run: |
           npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2025-01-18 --dry-run --outdir=dist
+          mkdir -p build
           cp -f dist/worker.js dist/_worker.js
           cp -f dist/worker.js build/unobfuscated-worker.js
           zip -j build/unobfuscated-worker.zip dist/_worker.js
