--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,13 @@ jobs:
 
       - name: Build project
         run: |
-          npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2025-01-18 --dry-run --outdir=dist
+          npx wrangler deploy src/worker.js --name bpb-worker-panel --compatibility-flag [nodejs_compat] --compatibility-date 2025-01-18 --dry-run --minify --outdir=dist
+          npx terser dist/worker.js --output dist/worker.min.js --comments false
           mkdir -p build
-          cp -f dist/worker.js dist/_worker.js
-          cp -f dist/worker.js build/unobfuscated-worker.js
+          cp -f dist/worker.min.js dist/_worker.js
+          cp -f dist/worker.min.js build/unobfuscated-worker.js
           zip -j build/unobfuscated-worker.zip dist/_worker.js
-          npx javascript-obfuscator --config ./obfs-config.json dist/worker.js --output _worker.js
+          npx javascript-obfuscator --config ./obfs-config.json dist/worker.min.js --output _worker.js
           cp -f _worker.js build/worker.js
           zip -j build/worker.zip _worker.js
 
