--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "jose": "^5.9.4",
     "js-sha256": "^0.11.0",
+    "jszip": "^3.10.1",
     "tweetnacl": "^1.0.3"
   }
 }
