--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "bpb-worker-panel",
-  "version": "3.1.3",
-  "author": {
-    "name": "Bia Pain Bache"
-  },
-  "devDependencies": {
-    "javascript-obfuscator": "latest",
-    "terser": "latest",
-    "wrangler": "latest"
-  },
-  "dependencies": {
-    "jose": "^5.9.4",
-    "js-sha256": "^0.11.0",
-    "jszip": "^3.10.1",
-    "tweetnacl": "^1.0.3"
-  }
+	"name": "bpb-panel",
+	"version": "3.2.0",
+	"homepage": "https://github.com/bia-pain-bache/BPB-Worker-Panel",
+	"license": "GPL-3.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "node scripts/build.js"
+	},
+	"devDependencies": {
+		"esbuild": "^0.25.2",
+		"glob": "^10.3.10",
+		"html-minifier": "^4.0.0",
+		"javascript-obfuscator": "latest"
+	},
+	"dependencies": {
+		"jose": "^6.0.10",
+		"jszip": "^3.10.1",
+		"tweetnacl": "^1.0.3"
+	}
 }
