Updated docs, bug fixes.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"jose": "^6.0.10",
 		"jszip": "^3.10.1",
-		"tweetnacl": "^1.0.3"
+		"tweetnacl": "^1.0.3",
+		"js-sha256": "^0.11.0"
 	}
 }
