--- a/docs/fa/mkdocs.yml
+++ b/docs/fa/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: BPB Panel
-site_url: https://bia-pain-bache.github.io/BPB-Worker-Panel
+site_url: https://bia-pain-bache.github.io
 
 use_directory_urls: true
 site_dir: ../../site/fa
@@ -60,7 +60,7 @@ extra:
   alternate:
     - name: English
       lang: en
-      link: en/
+      link: /BPB-Worker-Panel/en/
 
 plugins:
   - search
