--- a/docs/en/mkdocs.yml
+++ b/docs/en/mkdocs.yml
@@ -69,7 +69,7 @@ plugins:
 
 nav:
   - Home:
-    - Home: index.md
+    - index.md
     - Installation:
       - Wizard: installation/wizard.md
       - Manual - Pages: installation/pages-manual.md
