--- a/docs/en/mkdocs.yml
+++ b/docs/en/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://bia-pain-bache.github.io
 repo_url: https://github.com/bia-pain-bache/BPB-Worker-Panel
 
 use_directory_urls: true
-site_dir: ../../site/en
+site_dir: ../../site
 extra_css:
   - stylesheet/extra.css
 
