--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
 		"build": "node scripts/build.js"
 	},
 	"devDependencies": {
-		"esbuild": "^0.25.2",
-		"glob": "^10.3.10",
+		"@eslint/css": "^0.8.1",
+		"@eslint/js": "^9.28.0",
+		"@eslint/markdown": "^6.5.0",
+		"esbuild": "^0.25.5",
+		"eslint": "^9.28.0",
+		"glob": "^11.0.2",
+		"globals": "^16.2.0",
 		"html-minifier": "^4.0.0",
 		"javascript-obfuscator": "latest",
-		"terser": "^5.39.0"
+		"terser": "^5.42.0"
 	},
 	"dependencies": {
-		"js-sha256": "^0.11.0",
-		"jose": "^6.0.10",
+		"jose": "^6.0.11",
+		"js-sha256": "^0.11.1",
 		"jszip": "^3.10.1",
 		"tweetnacl": "^1.0.3"
 	}
