--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm install --production
 
       - name: Build project
-        run: npm run build
+        run: NODE_ENV=dev npm run build
 
       - name: Read release note
         id: read_release
