--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,9 +10,13 @@ body:
       id: confirm-search
       attributes:
           label: Attention | توجه
-          description: Please search [existing issues](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) before reporting | لطفا قبل از ارسال گزارش [ایشوهای موجود](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) را بررسی کنید.
+          description: |
+            Please search [existing issues](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) and read [FAQ](https://bia-pain-bache.github.io/BPB-Worker-Panel/faq/) before reporting.
+            لطفا قبل از ارسال گزارش [ایشوهای موجود](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) و مخصوصا [سوالات متداول](https://bia-pain-bache.github.io/BPB-Worker-Panel/faq/) را بررسی کنید.
           options:
               - label: I searched and no similar issues were found | جستجو کردم و هیچ گزارش مشابهی پیدا نشد
+                required: true
+              - label: I read FAQ and no relevant issues were found | سوالات متداول را خواندم و هیچ مورد مربوطی پیدا نشد
                 required: true
     - type: textarea
       id: problem
@@ -26,7 +30,7 @@ body:
     - type: textarea
       id: reproduce
       attributes:
-          label: Minimal Reproducible Example | چه پروسه‌ای برای مشاهده این مشکل طی کرده‌اید؟
+          label: Minimal Reproducible Example | چه فرایندی برای مشاهده این مشکل طی کرده‌اید؟
           placeholder: |
               1. Go to '...'
               2. Click on '....'
@@ -36,13 +40,33 @@ body:
       id: logs
       attributes:
           label: Relevant log output | لاگ برنامه یا پنل
-          description: Refer to the program menu and copy the log and send it to us.
+          description: |
+            Refer to the client logs if you have connection issues, otherwise paste panel error.
+            اگر مشکل اتصال دارید به قسمت log فیلترشکن بروید و اینجا کپی کنید و در غیر اینصورت خطای پنل را اینجا قرار دهید. 
           render: shell
       validations:
           required: true
-    - type: textarea
+    - type: input
       id: panel-version
       attributes:
-          label: Panel version | نسخه‌ی پنل
+          label: Panel version | نسخه‌ پنل
       validations:
           required: true
+    - type: input
+      id: client-name
+      attributes:
+          label: Client | برنامه فیلترشکن
+          description: |
+              Please specify the client application you are using, necessary for connection troubleshooting.
+              نام برنامه فیلترشکنی که استفاده می‌کنید را مشخص کنید، برای عیب‌یابی مشکلات اتصال الزامی است.
+      validations:
+          required: false
+    - type: input
+      id: client-version
+      attributes:
+          label: Client version | نسخه برنامه فیلترشکن
+          description: |
+              Please specify the client version, mandatory for connection troubleshooting.
+              نسخه فیلترشکنی که استفاده می‌کنید را مشخص کنید، برای عیب‌یابی مشکلات اتصال الزامی است.
+      validations:
+          required: false
