Updated issue template.

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -11,7 +11,7 @@ body:
       attributes:
           label: Attention | توجه
           description: |
-            Please search [existing issues](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) and read [FAQ](https://bia-pain-bache.github.io/BPB-Worker-Panel/faq/) before reporting.
+            Please search [existing issues](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) and read [FAQ](https://bia-pain-bache.github.io/BPB-Worker-Panel/faq/) before reporting.<br>
             لطفا قبل از ارسال گزارش [ایشوهای موجود](https://github.com/bia-pain-bache/BPB-Worker-Panel/issues) و مخصوصا [سوالات متداول](https://bia-pain-bache.github.io/BPB-Worker-Panel/faq/) را بررسی کنید.
           options:
               - label: I searched and no similar issues were found | جستجو کردم و هیچ گزارش مشابهی پیدا نشد
@@ -23,7 +23,7 @@ body:
       attributes:
           label: What Happened? | چه اتفاقی افتاده؟
           description: |
-              Please provide as much info as possible. Not doing so may result in your bug not being addressed in a timely manner.
+              Please provide as much info as possible. Not doing so may result in your bug not being addressed in a timely manner.<br>
               لطفاً اطلاعات کاملی را ارائه دهید. اگر این کار را انجام ندهید، ممکن است مشکل شما به صورت تمام شده تلقی شده یا در زمان مناسبی بررسی نشود.
       validations:
           required: true
@@ -41,7 +41,7 @@ body:
       attributes:
           label: Relevant log output | لاگ برنامه یا پنل
           description: |
-            Refer to the client logs if you have connection issues, otherwise paste panel error.
+            Refer to the client logs if you have connection issues, otherwise paste panel error.<br>
             اگر مشکل اتصال دارید به قسمت log فیلترشکن بروید و اینجا کپی کنید و در غیر اینصورت خطای پنل را اینجا قرار دهید. 
           render: shell
       validations:
@@ -57,7 +57,7 @@ body:
       attributes:
           label: Client | برنامه فیلترشکن
           description: |
-              Please specify the client application you are using, necessary for connection troubleshooting.
+              Please specify the client application you are using, necessary for connection troubleshooting.<br>
               نام برنامه فیلترشکنی که استفاده می‌کنید را مشخص کنید، برای عیب‌یابی مشکلات اتصال الزامی است.
       validations:
           required: false
@@ -66,7 +66,7 @@ body:
       attributes:
           label: Client version | نسخه برنامه فیلترشکن
           description: |
-              Please specify the client version, mandatory for connection troubleshooting.
+              Please specify the client version, mandatory for connection troubleshooting.<br>
               نسخه فیلترشکنی که استفاده می‌کنید را مشخص کنید، برای عیب‌یابی مشکلات اتصال الزامی است.
       validations:
           required: false
