--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
 		"jose": "^6.0.11",
 		"js-sha256": "^0.11.1",
 		"jszip": "^3.10.1",
-		"terser": "^5.42.0",
-		"tweetnacl": "^1.0.3"
+		"terser": "^5.42.0"
 	}
 }
