--- a/docs/en/mkdocs.yml
+++ b/docs/en/mkdocs.yml
@@ -61,9 +61,15 @@ markdown_extensions:
 
 extra:
   alternate:
+    - name: English
+      lang: en
+      link: /BPB-Worker-Panel/
     - name: Farsi
       lang: fa
       link: /BPB-Worker-Panel/fa/
+    - name: Chinese
+      lang: zh
+      link: /BPB-Worker-Panel/zh/
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/bia-pain-bache/BPB-Worker-Panel
