--- a/docs/fa/mkdocs.yml
+++ b/docs/fa/mkdocs.yml
@@ -1,10 +1,10 @@
 site_name: BPB Panel
-site_url: https://bia-pain-bache.github.io
-repo_url: https://github.com/bia-pain-bache/BPB-Worker-Panel
+site_url: https://bpb.amethyst.ltd
+repo_url: https://github.com/Starry-Sky-World/BPB-Chinese
 copyright: Copyright &copy; BPB
 
 use_directory_urls: true
-site_dir: ../../site/fa
+site_dir: ../../site
 extra_css:
   - stylesheet/extra.css
 
@@ -13,10 +13,8 @@ theme:
   custom_dir: ../assets
   logo: favicon.ico
   favicon: favicon.ico
-  direction: rtl
-  language: fa
-  font:
-    text: Vazirmatn
+  direction: ltr
+  language: zh
   palette:
     - media: "(prefers-color-scheme)"
       toggle:
@@ -58,21 +56,21 @@ markdown_extensions:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - md_in_html
-  
+
 extra:
   alternate:
     - name: English
       lang: en
-      link: /BPB-Worker-Panel/
+      link: /
     - name: Farsi
       lang: fa
-      link: /BPB-Worker-Panel/fa/
+      link: /fa/
     - name: Chinese
       lang: zh
-      link: /BPB-Worker-Panel/zh/
+      link: /zh/
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/bia-pain-bache/BPB-Worker-Panel
+      link: https://github.com/Starry-Sky-World/BPB-Chinese
       name: Source code
 
 plugins:
