--- a/docs/zh/mkdocs.yml
+++ b/docs/zh/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: BPB 控制面板
-site_url: https://bia-pain-bache.github.io
-repo_url: https://github.com/bia-pain-bache/BPB-Worker-Panel
+site_url: https://bpb.amethyst.ltd
+repo_url: https://github.com/Starry-Sky-World/BPB-Chinese
 copyright: Copyright &copy; BPB
 
 use_directory_urls: true
@@ -61,16 +61,16 @@ extra:
   alternate:
     - name: English
       lang: en
-      link: /BPB-Worker-Panel/
+      link: /
     - name: Farsi
       lang: fa
-      link: /BPB-Worker-Panel/fa/
+      link: /fa/
     - name: Chinese
       lang: zh
-      link: /BPB-Worker-Panel/zh/
+      link: /zh/
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/bia-pain-bache/BPB-Worker-Panel
+      link: https://github.com/Starry-Sky-World/BPB-Chinese
       name: Source code
 
 plugins:
