fix: 修正文档目录路径以确保中文站点正确生成

--- a/docs/fa/mkdocs.yml
+++ b/docs/fa/mkdocs.yml
@@ -4,7 +4,7 @@ repo_url: https://github.com/Starry-Sky-World/BPB-Chinese
 copyright: Copyright &copy; BPB
 
 use_directory_urls: true
-site_dir: ../../site
+site_dir: ../../site/fa
 extra_css:
   - stylesheet/extra.css
 
