--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-    	"build": "node scripts/build.js",
-    	"deploy-worker": "wrangler deploy --env workers",
-    	"deploy-pages": "wrangler pages deploy dist/pages --env pages"	},
+    "build": "node scripts/build.js",
+    "deploy-worker": "wrangler deploy --env workers",
+    "deploy-pages": "wrangler pages deploy --env pages"
+	},
 	"devDependencies": {
 		"@eslint/css": "^0.8.1",
 		"@eslint/js": "^9.28.0",
