--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,7 @@
+name = "tese"
+main = "dist/worker.js"
 compatibility_date = "2025-9-22"
 
 [build]
 command = "npm run build"
 watch_dir = "src"
-
-[env.workers]
-name = "test"
-main = "dist/worker.js"
-
-[env.pages]
-name = "test"
-pages_build_output_dir = "dist/pages"
-
