--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "node scripts/build.js",
-		"deploy-worker": "wrangler deploy --env workers",
+		"deploy-worker": "wrangler deploy --config wrangler.worker.toml",
 		"deploy-pages": "wrangler pages deploy dist/pages --env pages"
   },
 	"devDependencies": {
