--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "node scripts/build.js",
-		"deploy-worker": "wrangler deploy --env workers",
-		"deploy-pages": "wrangler pages deploy --env pages"
+		"deploy": "wrangler deploy"
   },
 	"devDependencies": {
 		"@eslint/css": "^0.8.1",
