Disable scheduled build workflow
Comment out the scheduled cron job in the build workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,8 @@ permissions:
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 */1 * * *'
+  #schedule:
+  #  - cron: '0 */1 * * *'
 
 jobs:
   build:
