--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
 	"name": "bpb-panel",
-	"version": "3.6.1",
+	"version": "4.0.0",
 	"homepage": "https://github.com/bia-pain-bache/BPB-Worker-Panel",
 	"license": "GPL-3.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
+		"check": "tsc --noEmit",
 		"build": "node scripts/build.js"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20251011.0",
 		"@eslint/css": "^0.8.1",
 		"@eslint/js": "^9.28.0",
 		"@eslint/markdown": "^6.5.0",
-		"eslint": "^9.28.0"
+		"@types/node": "^24.7.2",
+		"eslint": "^9.28.0",
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"esbuild": "^0.25.5",
