Added maxSplit, applyTo, Log Level, LAN connections. Updated docs.

--- a/docs/en/mkdocs.yml
+++ b/docs/en/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
     - Manual - Workers: installation/workers-manual.md
   - Configuration:
     - configuration/index.md
+    - Common: configuration/common.md
     - VLESS - Trojan: configuration/vless-trojan.md 
     - Fragment: configuration/fragment.md
     - Warp General: configuration/warp.md
