--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
             "@utils": ["cores/utils"],
             "@handlers": ["common/handlers"],
             "@init": ["common/init"],
+            "@common": ["common/common"],
             "@vless": ["protocols/websocket/vless"],
             "@trojan": ["protocols/websocket/trojan"],
             "@warp": ["protocols/warp"]
